- ``Maps::setAreaAquifer``: make all tiles in a cuboid into aquifers, with the option to provide a filter
- ``Maps::removeTileAquifer``: remove aquifer from tile
- ``Maps::removeAreaAquifer``: remove aquifers from all tiles in a cuboid, with the option to provide a filter
- ``Units::create``, ``Units::makeown``: new APIs to use bay12-provided entry points for low-level operations

## Lua
- ``dfhack.gui.getSelectedJob``: can now return the job with a destination under the keyboard cursor (e.g. digging/carving/engraving jobs)
- ``widgets.makeButtonLabelText``: create text and graphical buttons from character/color/tile maps and/or dynamically loaded tilesets
- ``widgets.DimensionsTooltip``: reusable selected dimensions tooltip that follows the mouse cursor around
- ``widgets.ButtonGroup``: subclass of CycleHotkeyLabel that additionally displays clickable graphical buttons
- ``widgets.CycleHotkeyLabel``: when the widget has both forward and backward hotkeys defined, support moving backwards by clicking on the appropriate hotkey hint
- ``safe_index``: will now return nil when attempting to index into a non-indexable object
- ``script-manager``: add ``getModSourcePath`` and ``getModStatePath`` so modders can get the directory path to their own files
- ``widgets.FilteredList``: don't restrict the player from inputting multiple successive space characters
- ``dfhack.maps.isTileAquifer``: check if tile is an aquifer
- ``dfhack.maps.isTileHeavyAquifer``: check if tile is a heavy aquifer
- ``dfhack.maps.setTileAquifer``: make tile into an aquifer
- ``dfhack.maps.removeTileAquifer``: remove aquifer from tile
- ``plugins.tiletypes.tiletypes_setTile``: can now accept a table for access to previously unavailable options
- ``dialogs.showYesNoPrompt``: extend options so the standard dialog can be used for `gui/confirm`-style confirmation prompts
- ``dfhack.units.create``, ``dfhack.units.makeown``: Lua access to new module API

## Removed
- `plants`: renamed to `plant`